--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,8 @@
-
-#connection with the databas
-
-spring.datasource.url=jdbc:mysql://localhost:3308/trace
+spring.datasource.url=jdbc:mysql://192.168.99.100:3306/traceDB?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.passsword=
-spring.jpa.hibernate.ddl-auto=update
-
-#allow the table connection with foreign keys
-
-spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
-
-#spring security
-
-#spring.security.user.name=steev
-#spring.security.user.password=steev
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = update
 
